# blocksimpy

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  README.md  pyproject.toml  quick_fix.py  requirements.txt
.github/workflows/: ci.yml
config/: README.md  defaults.yml
config/chains/bch/: bch.yml
config/chains/btc/: btc.yml
config/chains/doge/: doge.yml
config/chains/ltc/: ltc.yml
docs/: ARCHITECTURE.md
scripts/: run.py
src/blockchain_lab/: app.py
src/blockchain_lab/config/: __init__.py
src/blockchain_lab/simulation/: __init__.py  coordinator.py
src/blockchain_lab/utils/: __init__.py
src/blockchain_simulator/: __init__.py
src/blockchain_simulator/cli/: __init__.py  args_parser.py
src/blockchain_simulator/config/: config_loader.py
src/blockchain_simulator/core/: __init__.py  block.py  miner.py  node.py
src/blockchain_simulator/simulation/: wallet.py
src/blockchain_simulator/utils/: block_check.py  formatting.py
src/blocksimpy/: __init__.py  app.py
src/blocksimpy/attacks/: __init__.py  double_spend.py  eclipse.py  selfish_miner.py
src/blocksimpy/cli/: __init__.py  args_parser.py
src/blocksimpy/config/: CONFIGURATION_GUIDE.md  config_loader.py  defaults.yml
src/blocksimpy/config/chains/bch/: bch.yml
src/blocksimpy/config/chains/btc/: btc.yml
src/blocksimpy/config/chains/doge/: doge.yml
src/blocksimpy/config/chains/ltc/: ltc.yml
src/blocksimpy/config/chains/pos/eth2/: eth2.yml
src/blocksimpy/config/chains/pospace/chia/: chia.yml
src/blocksimpy/config/chains/pow/bch/: bch.yml
src/blocksimpy/config/chains/pow/btc/: btc.yml
src/blocksimpy/config/chains/pow/doge/: doge.yml
src/blocksimpy/config/chains/pow/ltc/: ltc.yml
src/blocksimpy/consensus/: __init__.py  base.py  pos.py  pospace.py  pow.py
src/blocksimpy/core/: __init__.py  block.py  miner.py  node.py
src/blocksimpy/simulation/: __init__.py  coordinator.py  metrics.py  state.py  wallet.py
src/blocksimpy/utils/: __init__.py  block_check.py  formatting.py  network_optimizer.py
tests/: conftest.py  test_basic.py  test_consensus.py  test_core_functionality.py  test_determinism.py  test_pospace.py  test_validation.py
tests/test_integration/: __init__.py  test_simulation.py
tests/test_unit/: __init__.py  test_block.py  test_difficulty.py  test_economics.py  test_mempool.py  test_miner.py
